# chroma-rust

./: .gitignore  Cargo.toml  README.md
examples/: chroma-play.rs
src/: effect.rs  error.rs  key.rs  lib.rs  sys.rs
src/sys/: effect.rs  key.rs  keys.rs
