[package]
name = "chroma"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6"
quick-error = "1.2"

[dependencies.winapi]
version = "0.3"
features = ["impl-debug"]