[package]
name = "chroma"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
libloading = "0.6"
quick-error = "1.2"
rgb = "0.8"

[dependencies.winapi]
version = "0.3"
features = ["impl-debug"]